--- a/components/forms/habit-form/habitForm.module.css
+++ b/components/forms/habit-form/habitForm.module.css
@@ -79,6 +79,7 @@
     gap: 10px;
 }
 .body .form .formGroup .goal .goalDetails {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 5px;
@@ -120,6 +121,32 @@
     padding: 5px 10px;
     font-size: 12px;
     font-weight: 600;
+    color: #000;
+}
+.body .form .formGroup .options{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    border: 1px solid #e4e2e2;
+}
+.body .form .formGroup .options .option{
+    padding: 10px;
+    width: 10%;
+    height: 50px;
+    font-size: 12px;
+    /* border-radius: 5px; */
+    font-weight: 600;
+    cursor: pointer;
+    text-align: center;
+    text-transform: capitalize;
+}
+.body .form .formGroup .options .option.active{
+    /* border: 1px solid #487bf3; */
+    background-color: #487bf3;
+    color: #fff;
+}
+.body .form .formGroup .options .option.inactive{
+    /* border: 1px solid #487bf3; */
     color: #000;
 }
 
