--- a/components/overlay/overlay.module.css
+++ b/components/overlay/overlay.module.css
@@ -10,6 +10,21 @@
     justify-content: center;
     align-items: center;
 }
+.fadeOut{
+    opacity:0;
+    width:0;
+    height:0;
+    transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
+
+}
+.fadeIn{
+    opacity:1;
+    width:100px;
+    height:100px;
+    transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
+
+}
+
 .overlayBackground{
     position: fixed;
     top: 0px;
