--- a/components/forms/habits-group-form/habit-form/habitsGroupForm.module.css
+++ b/components/forms/habits-group-form/habit-form/habitsGroupForm.module.css
@@ -1,3 +1,17 @@
+
+.bg_green {
+    background-color: #19db2a !important;
+    color: white;
+}
+
+.bg_green:active {
+    background-color: #55f362 !important;
+}
+
+.bg_green:disabled {
+    background-color: #9ae98f !important;
+}
+
 .habitForm{
     padding: 0px;
     margin: 0px;
