--- a/components/features/overlay/overlay.module.css
+++ b/components/features/overlay/overlay.module.css
@@ -1,5 +1,4 @@
-
-.overlay{
+.overlay {
     position: fixed;
     top: 0px;
     left: 0px;
@@ -9,23 +8,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 999;
 }
-.fadeOut{
-    opacity:0;
-    width:0;
-    height:0;
-    transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
-
-}
-.fadeIn{
-    opacity:1;
-    width:100px;
-    height:100px;
-    transition: width 0.5s, height 0.5s, opacity 0.5s 0.5s;
-
-}
-
-.overlayBackground{
+.overlayBackground {
     position: fixed;
     top: 0px;
     left: 0px;
@@ -37,7 +22,8 @@
     justify-content: center;
     align-items: center;
 }
-.overlayContent{
+
+.overlayContent {
     width: 100%;
     max-width: 500px;
     background-color: #fff;
