--- a/components/forms/habits-group-form/habit-form/habitsGroupForm.module.css
+++ b/components/forms/habits-group-form/habit-form/habitsGroupForm.module.css
@@ -140,7 +140,7 @@
 .footer{
     padding: 10px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     gap: 10px;
     background-color: #f0f0f0;
 }
@@ -174,6 +174,25 @@
     color: #3a3a3a;
     font-size: 13px;
     font-weight: 500;
+    gap: 3px;
+    cursor: pointer;
+    width: 70px;
+}
+
+.footer .mainAction{
+    display: flex;
+    gap: 5px;
+}
+
+.footer .deleteBtn{
+    padding: 8px;
+    border-radius: 3px;
+    border: 0;
+    border: 1px solid #dd4343;
+    background-color: #fff;
+    color: #dd4343;
+    font-size: 13px;
+    font-weight: 600;
     gap: 3px;
     cursor: pointer;
     width: 70px;
