--- a/components/forms/icons-drop-down/habitsGroupIcons.module.css
+++ b/components/forms/icons-drop-down/habitsGroupIcons.module.css
@@ -10,7 +10,7 @@
     padding: 5px;
     border-radius: 5px;
     border: 1px solid #e4e2e2;
-    background-color: #f7f7f7;
+    background-color: #ffffff;
     color: #7a7a7a;
     font-size: 15px;
     cursor: pointer;
@@ -19,29 +19,28 @@
     background-color: #d9d9d9;
 }
 .habitActionDropDown{
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    gap: 10px;
     position: absolute;
     top: 100%;
     left: 0;
-    width: 150px;
     padding: 5px;
     margin-top: 10px;
-    background-color: #ebebeb;
+    background-color: #ffffff;
     border-radius: 5px;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 .habitActionDropDownItem {
-    display: flex;
-    align-items: center;
     padding: 8px 10px;
     border-radius: 5px;
     color: #7a7a7a;
     font-size: 12px;
     cursor: pointer;
-    gap:10px;
 }
 .habitActionDropDownItem:hover {
-    background-color: #d9d9d9;
+    background-color: #ffffff;
 }
 
 .habitIconItem{
