--- a/components/habits-list/template/habit-list/habitsList.module.css
+++ b/components/habits-list/template/habit-list/habitsList.module.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
 }
+
 .header {
     display: flex;
     align-items: center;
@@ -13,21 +14,26 @@
     margin-bottom: 0px;
     width: 100%;
 }
+
 .header .title {
     margin: 0;
     padding: 15px;
+    height: 50px;
     font-size: 17px;
     font-weight: 600;
 }
-.header .actions{
+
+.header .actions {
     display: flex;
     align-items: center;
     padding-right: 15px;
-    gap:10px;
+    gap: 10px;
 }
+
 .header .addButton {
+    display: flex;
     border-radius: 5px;
-    padding: 8px 10px;
+    padding: 10px;
     border: 0;
     background-color: #2a67f4;
     color: #fff;
@@ -35,9 +41,15 @@
     font-weight: 600;
     cursor: pointer;
 }
-.header .editButton{
+
+.header .addButton:hover {
+    background-color: #275dda;
+}
+
+.header .editHabitButton {
+    display: flex;
     border-radius: 5px;
-    padding: 8px 10px;
+    padding: 10px;
     border: 0;
     background-color: #0ccf05;
     color: #fff;
@@ -46,6 +58,34 @@
     cursor: pointer;
 }
 
+.header .editHabitButton:hover {
+    background-color: #0bac05;
+}
+
+.header .editDateButton {
+    display: flex;
+    gap: 5px;
+    border-radius: 5px;
+    padding: 10px;
+    border: 0;
+    background-color: #2a67f4;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+.header .editDateButton:hover {
+    background-color: #275dda;
+}
+
+/* .body {
+    
+    overflow-y: auto;
+    max-height: calc(100vh - 51px);
+    scrollbar-gutter: stable;
+} */
+
 .habits {
     display: flex;
     flex-direction: column;
@@ -53,7 +93,8 @@
     margin: 0;
     padding: 10px;
 }
-.habits hr{
+
+.habits hr {
     margin: 0;
     margin-top: 10px;
     padding: 0;
@@ -61,7 +102,9 @@
     border-top: 1px solid #e4e2e2;
     width: 100%;
 }
-.noHabits,.loading{
+
+.noHabits,
+.loading {
     padding: 10px;
     margin: 0px;
     font-size: 16px;
@@ -69,28 +112,31 @@
     text-align: center;
 }
 
-.habitsSections{
+.habitsSections {
     display: flex;
     margin: 10px 20px;
     border-radius: 5px;
     overflow: hidden;
     gap: 0px;
 }
-.habitsSections button{
+
+.habitsSections button {
     padding: 10px;
     background-color: transparent;
     border: 0px;
     border-bottom: 2px solid #3b3b3b;
-    color:rgb(51, 51, 51);
+    color: rgb(51, 51, 51);
     width: 100%;
     font-size: 15px;
     font-weight: 600;
     cursor: pointer;
 }
-.habitsSections button:hover{
+
+.habitsSections button:hover {
     background-color: #d4d4d4;
 }
-.habitsSections button.active{
+
+.habitsSections button.active {
     background: #eee;
 }
 
@@ -103,13 +149,16 @@
     height: 60px;
     background-color: #fff;
 }
+
 .habit:hover {
     background-color: #f5f5f5;
 }
+
 .habit.done {
     /* border: 1px solid #ccc; */
     background-color: #f7f7f7;
 }
+
 /* .habitDone {
     position: absolute;
     top: 0;
@@ -127,15 +176,17 @@
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #e4e2e2;
-    padding:0px 10px;
+    padding: 0px 10px;
     height: 100%;
 }
+
 .habitInfo {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.habitInfo .habitIcon{
+
+.habitInfo .habitIcon {
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -146,17 +197,20 @@
     font-size: 15px;
     color: #f3f3f3;
 }
-.habitNameContainer{
+
+.habitNameContainer {
     display: flex;
     flex-direction: column;
     gap: 5px;
     padding: 10px 0px;
     width: 200px;
 }
-.habitName{
+
+.habitName {
     font-weight: 500;
     margin: 0;
 }
+
 .habitActions {
     display: flex;
     justify-content: flex-end;
@@ -164,7 +218,8 @@
     gap: 10px;
     width: 150px;
 }
-.habitFillButton button{
+
+.habitFillButton button {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -178,13 +233,15 @@
     gap: 3px;
     cursor: pointer;
 }
-.habitFillButton:active button{
+
+.habitFillButton:active button {
     background-color: #d9d9d9;
 
 }
-.habitActionButton{
+
+.habitActionButton {
     position: relative;
-    
+
 }
 
 .habitActionButtonIcon {
@@ -199,10 +256,12 @@
     font-size: 15px;
     cursor: pointer;
 }
+
 .habitActionButtonIcon:active {
     background-color: #d9d9d9;
 }
-.habitActionDropDown{
+
+.habitActionDropDown {
     position: absolute;
     top: 100%;
     left: 0;
@@ -210,9 +269,10 @@
     margin-top: 10px;
     background-color: #f7f7f7;
     border-radius: 10px;
-    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
+
 .habitActionDropDownItem {
     display: flex;
     align-items: center;
@@ -220,20 +280,23 @@
     color: #7a7a7a;
     font-size: 12px;
     cursor: pointer;
-    gap:10px;
+    gap: 10px;
 }
+
 .habitActionDropDownItem:hover {
     background-color: #e9e9e9;
 }
+
 .habitProgress {
     position: relative;
     width: 200px;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     background-color: #e4e2e2;
     border-radius: 10px;
     height: 30px;
     overflow: hidden;
 }
+
 .habitProgress .progress {
     position: absolute;
     top: 0;
@@ -241,16 +304,19 @@
     height: 100%;
     width: 100%;
 }
-.habitProgressText{
+
+.habitProgressText {
     font-size: 12px;
     color: #7a7a7a;
     margin: 0;
 }
+
 .progressDone {
     background-color: #2a67f4;
     height: 30px;
     width: 50%;
 }
+
 .habitProgress .progressText {
     position: absolute;
     top: 0;
@@ -273,10 +339,12 @@
     border-radius: 5px;
     cursor: pointer;
 }
+
 .subHabits:hover {
     color: #575757;
 }
-.subHabitsContent{
+
+.subHabitsContent {
     /* border-left: 10px solid #ccc; */
     padding-left: 20px;
 }
