--- a/components/sidebar/sidebar.module.css
+++ b/components/sidebar/sidebar.module.css
@@ -74,3 +74,16 @@
     display: flex;
     gap: 10px;
 }
+.skeletonSideBar {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    margin: 0px;
+}
+.skeletonSideBar .user{
+    width: 100%;
+    height:40px;
+    margin-top: 20px;
+    border: 1px solid #f3f3f3;
+    background-color: #ececec;
+}
