--- a/components/habits-list/template/habit-list/habitsList.module.css
+++ b/components/habits-list/template/habit-list/habitsList.module.css
@@ -315,6 +315,7 @@
     background-color: #2a67f4;
     height: 30px;
     width: 50%;
+    transition: width 0.5s ease-in-out;
 }
 
 .habitProgress .progressText {
