--- a/components/sidebar/sidebar.module.css
+++ b/components/sidebar/sidebar.module.css
@@ -47,6 +47,7 @@
 .sections .active{
     background-color: #2a67f4;
     color: #fff;
+    transition: all 0.3s ease-in-out;
 }
 
 .sectionElement{
