--- a/components/forms/habits-group-form/habit-form/habitsGroupForm.module.css
+++ b/components/forms/habits-group-form/habit-form/habitsGroupForm.module.css
@@ -1,4 +1,3 @@
-
 .bg_green {
     background-color: #19db2a !important;
     color: white;
@@ -12,40 +11,46 @@
     background-color: #9ae98f !important;
 }
 
-.habitForm{
+.habitForm {
     padding: 0px;
     margin: 0px;
 }
-.header{
+
+.header {
     padding: 20px;
     padding-bottom: 0px;
 }
-.header .title{
+
+.header .title {
     padding: 0;
     margin: 0;
     font-size: 18px;
     font-weight: 600;
 }
 
-.body{
+.body {
     padding: 20px;
 }
-.body .form{
+
+.body .form {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-.body .form .formGroup{
+
+.body .form .formGroup {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
-.body .form .formGroup .label{
+
+.body .form .formGroup .label {
     font-size: 12px;
     font-weight: 600;
     color: #727272;
 }
-.body .form .formGroup .input{
+
+.body .form .formGroup .input {
     border: 1px solid #e4e2e2;
     border-radius: 5px;
     padding: 5px 10px;
@@ -53,15 +58,18 @@
     font-weight: 600;
     color: #000;
 }
-.body .form .formGroup .input:focus{
+
+.body .form .formGroup .input:focus {
     outline: none;
 }
-.body .form .formGroup .input::placeholder{
+
+.body .form .formGroup .input::placeholder {
     color: #000;
     font-size: 12px;
     font-weight: 600;
 }
-.body .form .formGroup .input[type="checkbox"]{
+
+.body .form .formGroup .input[type="checkbox"] {
     width: 15px;
     height: 15px;
     border: 1px solid #e4e2e2;
@@ -71,6 +79,7 @@
     font-weight: 600;
     color: #000;
 }
+
 .body .form .formGroup .select {
     border: 1px solid #e4e2e2;
     border-radius: 5px;
@@ -79,56 +88,54 @@
     font-weight: 600;
     color: #000;
 }
-.body .form .formGroup .select:focus{
+
+.body .form .formGroup .select:focus {
     outline: none;
 }
-.body .form .formGroup .select::placeholder{
+
+.body .form .formGroup .select::placeholder {
     color: #000;
     font-size: 12px;
     font-weight: 600;
 }
-.body .form .formGroup .goal{
+
+.body .form .formGroup .goal {
     display: flex;
     align-items: center;
     gap: 10px;
 }
+
 .body .form .formGroup .goal .goalDetails {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
-.body .form .formGroup .goal .goalDetails .goalDetailsHeader{
+
+.body .form .formGroup .goal .goalDetails .goalDetailsHeader {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.body .form .formGroup .goal .goalDetails .goalDetailsBody{
+
+.body .form .formGroup .goal .goalDetails .goalDetailsBody {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.body .form .formGroup .goal .goalDetails .goalDetailsBody .goalDetailsBodyGroup{
+
+.body .form .formGroup .goal .goalDetails .goalDetailsBody .goalDetailsBodyGroup {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
-.body .form .formGroup .goal .goalDetails .goalDetailsBody .goalDetailsBodyGroup .label{
+
+.body .form .formGroup .goal .goalDetails .goalDetailsBody .goalDetailsBodyGroup .label {
     font-size: 12px;
     font-weight: 600;
     color: #000;
 }
-.body .form .formGroup .goal .goalDetails .goalDetailsBody .goalDetailsBodyGroup .input{
-    border: 1px solid #e4e2e2;
-    border-radius: 5px;
-    padding: 5px 10px;
-    font-size: 12px;
-    font-weight: 600;
-    color: #000;
-}
-.body .form .formGroup .goal .goalDetails .goalDetailsBody .goalDetailsBodyGroup .input:focus{
-    outline: none;
-}
-.body .form .formGroup .goal .goalDetails .goalDetailsBody .goalDetailsBodyGroup .select{
+
+.body .form .formGroup .goal .goalDetails .goalDetailsBody .goalDetailsBodyGroup .input {
     border: 1px solid #e4e2e2;
     border-radius: 5px;
     padding: 5px 10px;
@@ -137,15 +144,31 @@
     color: #000;
 }
 
-.footer{
+.body .form .formGroup .goal .goalDetails .goalDetailsBody .goalDetailsBodyGroup .input:focus {
+    outline: none;
+}
+
+.body .form .formGroup .goal .goalDetails .goalDetailsBody .goalDetailsBodyGroup .select {
+    border: 1px solid #e4e2e2;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: 600;
+    color: #000;
+}
+
+.footer {
     padding: 10px;
     display: flex;
     justify-content: space-between;
     gap: 10px;
     background-color: #f0f0f0;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    overflow: hidden;
 }
 
-.footer .submit{
+.footer .submit {
     padding: 8px;
     border-radius: 3px;
     border: 0;
@@ -157,15 +180,17 @@
     cursor: pointer;
     width: 70px;
 }
-.footer .submit:active{
+
+.footer .submit:active {
     background-color: #2a67f4d9;
 }
-.footer .submit:disabled{
+
+.footer .submit:disabled {
     background-color: #82a4f3d9;
     cursor: not-allowed;
 }
 
-.footer .cancelBtn{
+.footer .cancelBtn {
     padding: 8px;
     border-radius: 3px;
     border: 0;
@@ -179,12 +204,12 @@
     width: 70px;
 }
 
-.footer .mainAction{
+.footer .mainAction {
     display: flex;
     gap: 5px;
 }
 
-.footer .deleteBtn{
+.footer .deleteBtn {
     padding: 8px;
     border-radius: 3px;
     border: 0;
