--- a/components/habits-list/template/habit-list/habitsListDarkTheme.module.css
+++ b/components/habits-list/template/habit-list/habitsListDarkTheme.module.css
@@ -1,18 +1,25 @@
+/* Dark Theme */
+
+/* Content Container */
 .content {
     display: flex;
     flex-direction: column;
     width: 100%;
     margin: 0;
     padding: 0;
+    background-color: transparent;
+    color: #f5f5f5;
 }
 
+/* Header */
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #e4e2e2;
+    border-bottom: 1px solid #2b2b2b;
     margin-bottom: 0px;
     width: 100%;
+    background-color: #101010;
 }
 
 .header .title {
@@ -30,16 +37,21 @@
     gap: 10px;
 }
 
-.header .addButton {
+.header .addButton,
+.header .editHabitButton,
+.header .editDateButton {
     display: flex;
     border-radius: 5px;
     padding: 10px;
     border: 0;
-    background-color: #2a67f4;
-    color: #fff;
+    cursor: pointer;
     font-size: 12px;
     font-weight: 600;
-    cursor: pointer;
+}
+
+.header .addButton {
+    background-color: #2a67f4;
+    color: #fff;
 }
 
 .header .addButton:hover {
@@ -47,15 +59,8 @@
 }
 
 .header .editHabitButton {
-    display: flex;
-    border-radius: 5px;
-    padding: 10px;
-    border: 0;
     background-color: #0ccf05;
     color: #fff;
-    font-size: 12px;
-    font-weight: 600;
-    cursor: pointer;
 }
 
 .header .editHabitButton:hover {
@@ -63,33 +68,18 @@
 }
 
 .header .editDateButton {
-    display: flex;
-    gap: 5px;
-    border-radius: 5px;
-    padding: 10px;
-    border: 0;
     background-color: #2a67f4;
     color: #fff;
-    font-size: 12px;
-    font-weight: 600;
-    cursor: pointer;
 }
 
 .header .editDateButton:hover {
     background-color: #275dda;
 }
 
-/* .body {
-    
-    overflow-y: auto;
-    max-height: calc(100vh - 51px);
-    scrollbar-gutter: stable;
-} */
-
+/* Habits Section */
 .habits {
     display: flex;
     flex-direction: column;
-    /* gap: 10px; */
     margin: 0;
     padding: 10px;
 }
@@ -99,7 +89,7 @@
     margin-top: 10px;
     padding: 0;
     border: 0;
-    border-top: 1px solid #e4e2e2;
+    border-top: 1px solid #2b2b2b;
     width: 100%;
 }
 
@@ -112,12 +102,14 @@
     text-align: center;
 }
 
+/* Habits Sections */
 .habitsSections {
     display: flex;
     margin: 10px 20px;
     border-radius: 5px;
     overflow: hidden;
     gap: 0px;
+    background-color: #101010;
 }
 
 .habitsSections button {
@@ -133,49 +125,40 @@
 }
 
 .habitsSections button:hover {
-    background-color: #d4d4d4;
+    background-color: #2b2b2b;
+    color: #f5f5f5;
 }
 
 .habitsSections button.active {
-    background: #eee;
+    background: #333333;
+    color: #f5f5f5;
 }
 
+/* Habit Item */
 .habit {
     display: flex;
     position: relative;
     flex-direction: column;
     padding: 0px;
-    /* border-radius: 5px; */
     height: 60px;
-    background-color: #fff;
+    background-color: #1a1a1a;
+    border-bottom: 1px solid #2b2b2b;
+    color: #f5f5f5;
 }
 
 .habit:hover {
-    background-color: #f5f5f5;
+    background-color: #202020;
 }
 
 .habit.done {
-    /* border: 1px solid #ccc; */
-    background-color: #f7f7f7;
+    background-color: #3c3c3c;
 }
 
-/* .habitDone {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    width: 100%;
-    height: 3px;
-    border-radius: 0px;
-    background-color:   #333333;
-    z-index: 1;
-} */
 .habitDetails {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #e4e2e2;
+    border-bottom: 1px solid #2b2b2b;
     padding: 0px 10px;
     height: 100%;
 }
@@ -190,12 +173,12 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background-color: #ebebeb;
+    background-color: #2b2b2b;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 15px;
-    color: #f3f3f3;
+    color: #f5f5f5;
 }
 
 .habitNameContainer {
@@ -209,6 +192,7 @@
 .habitName {
     font-weight: 500;
     margin: 0;
+    color: #f5f5f5;
 }
 
 .habitActions {
@@ -225,9 +209,9 @@
     justify-content: center;
     padding: 5px 10px;
     border-radius: 5px;
-    border: 1px solid #e4e2e2;
-    background-color: #f8f8f8;
-    color: #000;
+    border: 1px solid #2b2b2b;
+    background-color: #2b2b2b;
+    color: #f5f5f5;
     font-size: 14px;
     font-weight: 500;
     gap: 3px;
@@ -235,13 +219,11 @@
 }
 
 .habitFillButton:active button {
-    background-color: #d9d9d9;
-
+    background-color: #1f1f1f;
 }
 
 .habitActionButton {
     position: relative;
-
 }
 
 .habitActionButtonIcon {
@@ -250,15 +232,15 @@
     justify-content: center;
     padding: 7px 5px;
     border-radius: 5px;
-    border: 1px solid #e4e2e2;
-    background-color: #f7f7f7;
-    color: #7a7a7a;
+    border: 1px solid #2b2b2b;
+    background-color: #2b2b2b;
+    color: #f5f5f5;
     font-size: 15px;
     cursor: pointer;
 }
 
 .habitActionButtonIcon:active {
-    background-color: #d9d9d9;
+    background-color: #1f1f1f;
 }
 
 .habitActionDropDown {
@@ -267,7 +249,7 @@
     left: 0;
     width: 150px;
     margin-top: 10px;
-    background-color: #f7f7f7;
+    background-color: #2b2b2b;
     border-radius: 10px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
@@ -278,21 +260,20 @@
     display: flex;
     align-items: center;
     padding: 10px 10px;
-    color: #7a7a7a;
+    color: #f5f5f5;
     font-size: 12px;
     cursor: pointer;
     gap: 10px;
 }
 
 .habitActionDropDownItem:hover {
-    background-color: #e9e9e9;
+    background-color: #333333;
 }
 
 .habitProgress {
     position: relative;
     width: 200px;
-    /* border: 1px solid #ccc; */
-    background-color: #e4e2e2;
+    background-color: #2b2b2b;
     border-radius: 10px;
     height: 30px;
     overflow: hidden;
@@ -330,6 +311,7 @@
     color: #fff;
 }
 
+/* Sub Habits */
 .subHabits {
     display: flex;
     align-items: center;
@@ -337,7 +319,7 @@
     margin: 0;
     padding: 10px;
     font-weight: 600;
-    border: 1px solid #ccc;
+    border: 1px solid #2b2b2b;
     border-radius: 5px;
     cursor: pointer;
 }
@@ -347,6 +329,5 @@
 }
 
 .subHabitsContent {
-    /* border-left: 10px solid #ccc; */
     padding-left: 20px;
 }
