--- a/components/forms/habit-form/habitForm.module.css
+++ b/components/forms/habit-form/habitForm.module.css
@@ -204,6 +204,9 @@
 }
 
 .footer .submit {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 8px;
     border-radius: 3px;
     border: 0;
