--- a/components/forms/habits-group-form/habit-form/habitsGroupFormDarkTheme.module.css
+++ b/components/forms/habits-group-form/habit-form/habitsGroupFormDarkTheme.module.css
@@ -54,6 +54,7 @@
 .body .form .formGroup .input[type="checkbox"],
 .body .form .formGroup .select {
     border: 1px solid #444444;
+    padding: 5px 10px;
     background-color: #2a2a2a;
     color: #ffffff;
 }
