--- a/components/habits-list/template/habit-list/habitsListDarkTheme.module.css
+++ b/components/habits-list/template/habit-list/habitsListDarkTheme.module.css
@@ -116,7 +116,7 @@
     padding: 10px;
     background-color: transparent;
     border: 0px;
-    border-bottom: 2px solid #3b3b3b;
+    border-bottom: 2px solid #df4343;
     color: rgb(51, 51, 51);
     width: 100%;
     font-size: 15px;
@@ -130,7 +130,7 @@
 }
 
 .habitsSections button.active {
-    background: #333333;
+    background: #181818;
     color: #f5f5f5;
 }
 
