--- a/components/features/spinner/spinner.module.css
+++ b/components/features/spinner/spinner.module.css
@@ -7,8 +7,8 @@
 .spinner{
     width: 100%;
     height: 100%;
-    border: 5px solid #ffffff;
-    border-top: 5px solid #00000000;
+    border: 5px solid #4b4b4b;
+    border-top: 5px solid transparent;
     border-radius: 50%;
     animation: spin 1s linear infinite;
 }
