--- a/components/habits-list/template/habit-list/habitsList.module.css
+++ b/components/habits-list/template/habit-list/habitsList.module.css
@@ -189,7 +189,7 @@
 .habitInfo .habitIcon {
     width: 30px;
     height: 30px;
-    border-radius: 50%;
+    border-radius: 100%;
     background-color: #ebebeb;
     display: flex;
     align-items: center;
@@ -203,7 +203,7 @@
     flex-direction: column;
     gap: 5px;
     padding: 10px 0px;
-    width: 200px;
+    min-width: 150px;
 }
 
 .habitName {
