--- a/styles/signIn.module.css
+++ b/styles/signIn.module.css
@@ -1,3 +1,7 @@
+.text_white {
+    color: white;
+  }
+  
 .signInButtonContent {
     display: flex;
     justify-content: center;
@@ -62,4 +66,89 @@
     100% {
         transform: rotate(360deg);
     }
+}
+.form{
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.formLabel{
+    display: flex;
+    flex-direction: column;
+    font-size: 1.2rem;
+    margin-bottom: 5px;
+    gap:5px;
+}
+.formLabel p{
+    padding: 0px;
+    margin:0px;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.formLabel input{
+    width: 100%;
+    padding: 10px;
+    outline: none;
+    border-radius: 3px;
+    border: 1px solid #ccc;
+    background: #e9e9e9;
+    font-size: 15px;
+}
+.formSubmit{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40px;
+    padding: 15px 10px;
+    font-size: 11px;
+    font-weight: 600;
+    background-color: #2a67f4;
+    border: 0;
+    border-radius: 3px;
+    color: white;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.formSubmit:hover{
+    background-color: #1e4eb8;
+}
+.formSubmit:active{
+    background-color: #1a3d91;
+}
+
+.formFooter{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+.formFooter a{
+    font-size: 15px;
+    font-weight: 500;
+    color: #2a67f4;
+    text-decoration: none;
+}
+.splitter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+    margin: 0px;
+    padding: 0px;
+}
+.errorMessage{
+    color: red;
+    font-size: 15px;
+    font-weight: 500;
+    text-align: center;
 }
